--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
 title: [KIIT AI Society]
-description: [Official Github account of KIIT AI Society, Bhubaneshwar]
+description: [Official Github account of KIIT AI Society | Bhubaneshwar]
